--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -247,10 +247,12 @@ a:hover{
 
 /* Media Query for Mobile Devices */
 @media (max-width: 768px) {
-  .logo{height: 50px;}
+  .logo{height: 80px;}
   .main-content {
     flex-direction: column; /* Stack flex items vertically */
   }
+
+  .btn {padding: 7px; margin: 7px;}
 
   .left, .center, .right {
     width: 100%; /* Each child takes full width */
@@ -270,6 +272,8 @@ a:hover{
   .left {
     order: 1; /* Places left in the middle */
     align-items: flex-start;
+    background: #000;
+    padding: 18px 0px;
   }
 
   .right {
