still trying scroll

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -134,7 +134,7 @@ body {
   margin: 0;              /* Remove default margin */
   justify-content: space-between; /* Space out columns */
   padding: 0 10px;
- 
+ overflow-y: auto;
 }
 
 .content-div, .upcoming-div{
@@ -285,4 +285,7 @@ a:hover{
   }
   .span-content{padding: 0px;}
   .spacer{height: 20px;}
+  .layers__container{
+    height: 100%; overflow-y: auto;
+  }
 }
