--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -247,6 +247,43 @@ a:hover{
 
 /* Media Query for Mobile Devices */
 @media (max-width: 768px) {
+
+
+  .parallax {
+    transform-style: flat;
+    transform: none;
+    transition: none;
+    will-change: auto;
+  }
+
+  .layers {
+    perspective: none;
+    overflow: visible; /* Make overflow visible to allow normal scrolling */
+  }
+
+  .layers__container {
+    height: auto; /* Remove fixed height to allow content to expand */
+    min-height: 0; /* Reset min-height */
+  }
+
+  .layers__item {
+    position: relative; /* Switch from absolute to relative */
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+
+  /* Reset transformations for all layers */
+  .layer-background,
+  .layer-1-ast,
+  .layer-2-main,
+  .layer-3-rain,
+  .layer-4-leaves,
+  .layer-5-glow {
+    transform: none;
+  }
+
   .logo{height: 80px;}
   .main-content {
     flex-direction: column; /* Stack flex items vertically */
@@ -286,8 +323,4 @@ a:hover{
   .span-content{padding: 0px;}
   .spacer{height: 20px;}
   
-   .parallax{ transform-style: flat;
-    transform: none;
-    transition: none;
-    will-change: auto;}
 }
