--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -254,7 +254,7 @@ a:hover{
       overflow: visible;
     
   }
-  
+  .layers__container{min-height: 1000px;}
 
   .logo{height: 80px;}
   .main-content {
